CMDBuild 2.4.2 (released YYYY/MM/DD)


NEW FEATURES

 * "Show language choice" configuration not readed at login page

 * Advanced filters management from REST web services

 * Notification of errors by email

 * Performance improvements to queries

 * Preselection of workflow activities

 * Simple filter support for processes routes


FIXES

 * Software version string visually displayed in half on login panel

 * Selected tab reset on class change in administration Classes module

 * Classes geographical attributes tab no zoom levels validation

 * Selected tab reset on accordion selection change in administration modules

 * UI not loading on Tomcat 8.0.36 (latest)

 * Double email delete server call on create/edit window close

 * CreateModifyCard widget with null Reference cannot be configured

 * History tab rows doesn't display relation attributes

 * Error when trying to get cards from a superclass when there are row privileges defined on a subclass

 * Wrong selection when accessing closed processes from url

 * Task manager UI behaviour errors





CMDBuild 2.4.1 (released 2016/06/16)


NEW FEATURES

 * Single authentication system used by all web service

 * Added Czech translation

 * Keep sync checkbox checked by default on administration email template form

 * Locks related to a user session must be removed when the session is closed or expired

 * Single execution of a task without scheduling

 * Impersonate another user and/or group using workflow API

 * User and current group ids available within functions used for dashboards

 * Workflow metadata implementation

 * Row and column privileges save policies review

 * Generic task for sending reports throught e-mail


FIXES

 * Tab Email: widget configuration's presence also if widget doens't exists

 * REST logout error with header autenticator

 * Menu available items wrong italian translations

 * PreselectIfUnique metadata sent on attribute save action

 * Management report pagination errors
