@@ -333,6 +333,7 @@
 		INITIAL_ZOOM_LEVEL: 'initialZoomLevel',
 		INPUT: 'input',
 		INSTANCE: 'instance',
+		INSTANCE_ID: 'instanceId',
 		INSTANCE_IDENTIFIER: 'instanceIdentifier',
 		INSTANCE_NAME: 'instanceName',
 		INSTRUCTIONS: 'instructions',
@@ -648,6 +649,7 @@
 		WORKFLOW_ACTIVE: 'workflowActive',
 		WORKFLOW_ATTRIBUTES: 'workflowAttributes',
 		WORKFLOW_CLASS_NAME: 'workflowClassName',
+		WORKFLOW_ID: 'workflowId',
 		WORKFLOW_NAME: 'workflowName',
 		WORKSPACE: 'workspace',
 		WRITABLE: 'writable',
