@@ -15,6 +15,8 @@ NEW FEATURES
 
  * Simple filter support for processes routes
 
+ * New GetCardPosition management
+
 
 FIXES
 
